--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
 <body>
 
   <div class="board">
-    <h1>Todo</h1><img src="./images/icon-sun.svg" alt="">
+    <h1>Todo</h1><img class="sun-icon" src="./images/icon-sun.svg" alt="">
     <div class="container">
-      <div class="todoBar">
-
-       <input type="checkbox" class="check">
+      <div class="select-box">
+        <select name="select" id="">
+          <option value="all">All</option>
+          <option value="active">active</option>
+          <option value="completed">completed</option>
+        </select>
+      </div>
+      <div class="todoBox">
+      
        <!-- Input area -->
         <input type="text" class="create-todo">
-       <button></button>
+       <button class="add"></button>
       </div>
       <div class="todos">
         <!-- here will display todo "div" -->
@@ -40,7 +46,7 @@
 
  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">YongJin</a>.
   </div>
 
   <script src="todo.js"></script>
