--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <link rel="stylesheet" href="todo.css">
@@ -13,18 +12,19 @@
 
   <title>Frontend Mentor | Todo app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
   <div class="board">
-    <h1>Todo</h1><img class="sun-icon" src="./images/icon-sun.svg" alt="">
+    <div class="title">
+
+      <h1>T O D O</h1>
+      <img class="sun-icon" src="https://cdn-icons-png.flaticon.com/512/196/196685.png"  alt="">
+    </div>
     <div class="container">
+     
       <div class="select-box">
+        <p class="clear">clear</p>
         <select name="select" id="">
           <option value="all">All</option>
           <option value="active">active</option>
@@ -32,9 +32,8 @@
         </select>
       </div>
       <div class="todoBox">
-      
        <!-- Input area -->
-        <input type="text" class="create-todo">
+        <input type="text" class="create-todo" placeholder="Create a new Todo">
        <button class="add"></button>
       </div>
       <div class="todos">
@@ -43,11 +42,6 @@
     </div>
   </div>
 
-
- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">YongJin</a>.
-  </div>
 
   <script src="todo.js"></script>
 </body>
